--- a/요구사항분석/요구사항.md
+++ b/요구사항분석/요구사항.md
@@ -1,1 +1,20 @@
-1) ~~~
+### 프로젝트 목표 : 실 사용 가능한 리그오브레전드 듀오 매칭 웹 페이지 개발
+
+개발 요구사항
+1) 회원은 글을 작성할 수 있다
+2) 회원은 글을 수정할 수 있다
+3) 회원은 글을 삭제할 수 있다
+4) 회원은 댓글을 작성할 수 있다
+5) 회원은 자신의 게임 아이디를 사용해 라이엇 API에서 전적을 가져올 수 있다
+6) 관리자는 글을 수정할 수 있다
+7) 관리자는 글을 삭제할 수 있다
+8) 관리자는 글을 작성할 수 있다
+9) 모든 회원은 게시판에 등록된 게시물을 검색할 수 있다
+10) 유저명으로 검색할 수 있다
+11) 게임 id로 검색할 수 있다
+12) 비회원은 글을 작성할 수 없다
+13) 회원은 회원가입시, 이메일 인증을 받아야 한다
+14) 회원은 내 정보 페이지를 통해 자신이 작성한 글을 확인할 수 있다
+15) 회원은 내 정보 페이지를 통해 비밀번호를 변경할 수 있다.
+16) 회원가입시 회원은 ID, 비밀번호, 닉네임, 이메일주소, 게임 ID, 이름, 생년월일을 필요로 한다
+17) 인증은 확장성을 고려해 JWT를 사용한다
