--- a/요구사항분석/요구사항.md
+++ b/요구사항분석/요구사항.md
@@ -1,6 +1,7 @@
 ### 프로젝트 목표 : 실 사용 가능한 리그오브레전드 듀오 매칭 웹 페이지 개발
 
-개발 요구사항
+#### 개발 요구사항
+
 1) 회원은 글을 작성할 수 있다
 2) 회원은 글을 수정할 수 있다
 3) 회원은 글을 삭제할 수 있다
@@ -18,3 +19,6 @@
 15) 회원은 내 정보 페이지를 통해 비밀번호를 변경할 수 있다.
 16) 회원가입시 회원은 ID, 비밀번호, 닉네임, 이메일주소, 게임 ID, 이름, 생년월일을 필요로 한다
 17) 인증은 확장성을 고려해 JWT를 사용한다
+18) 각 회원은 자신이 작성한 글에 댓글이 달리면 알림을 받는다
+19) 댓글의 깊이는 1단계로 한다
+20) 게시글 작성시 상대에게 원하는 시간, 티어를 공지해야 한다
