--- a/요구사항분석/요구사항.md
+++ b/요구사항분석/요구사항.md
@@ -22,3 +22,4 @@
 18) 각 회원은 자신이 작성한 글에 댓글이 달리면 알림을 받는다
 19) 댓글의 깊이는 1단계로 한다
 20) 게시글 작성시 상대에게 원하는 시간, 티어를 공지해야 한다
+21) 게시글 작성시 자신이 자주 사용하는 챔피언 3개를 공지해야 한다
