--- a/요구사항분석/요구사항.md
+++ b/요구사항분석/요구사항.md
@@ -19,7 +19,14 @@
 15) 회원은 내 정보 페이지를 통해 비밀번호를 변경할 수 있다.
 16) 회원가입시 회원은 ID, 비밀번호, 닉네임, 이메일주소, 게임 ID, 이름, 생년월일을 필요로 한다
 17) 인증은 확장성을 고려해 JWT를 사용한다
-18) 각 회원은 자신이 작성한 글에 댓글이 달리면 알림을 받는다
+18) 각 회원은 자신이 작성한 글에 댓글이 달리면 웹 푸시 알림을 받는다
 19) 댓글의 깊이는 1단계로 한다
 20) 게시글 작성시 상대에게 원하는 시간, 티어를 공지해야 한다
 21) 게시글 작성시 자신이 자주 사용하는 챔피언 3개를 공지해야 한다
+22) 회원은 같이 게임한 유저에 대해 리뷰/평점을 남길 수 있다.
+23) 각 회원은 선호 포지션을 설정해야 한다
+24) 부적절한 사용자나 게시글을 신고할 수 있다
+25) 듀오가 매칭된 게시글은 해당 상태를 표시할 수 있어야 한다
+26) API에 호출 제한이 있을 경우, 캐싱을 통해 한번 검색한 게시글을 빠르게 보여준다
+27) 회원 검색시 티어, 최근 10게임 전적, KDA 를 가져온다
+28) 서버는 한국서버로 한정한다
